# echoless

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README.zh-CN.md  THIRD-PARTY-LICENSES.md
.github/workflows/: build.yml
Design/: icon-ideas.html
aec3/: Cargo.toml  README.md  README.zh-CN.md
aec3/crates/aec3-agc2/: Cargo.toml
aec3/crates/aec3-agc2/src/: lib.rs
aec3/crates/aec3-agc2/src/rnn_vad/: auto_correlation.rs  fc_layer.rs  pitch_search.rs  pitch_search_internal.rs  spectral_features.rs
aec3/crates/aec3-apm/: Cargo.toml
aec3/crates/aec3-apm/src/: audio_buffer.rs  audio_converter.rs  audio_processing.rs  input_volume_controller.rs  lib.rs
aec3/crates/aec3-apm/tests/: realtime_alloc.rs
aec3/crates/aec3-common-audio/: Cargo.toml
aec3/crates/aec3-common-audio/src/: lib.rs  push_resampler.rs
aec3/crates/aec3-core/: Cargo.toml
aec3/crates/aec3-core/src/: adaptive_fir_filter.rs  adaptive_fir_filter_erl.rs  aec3_fft.rs  block_processor.rs  cascaded_biquad_filter.rs  comfort_noise_generator.rs  config.rs  echo_path_delay_estimator.rs  lib.rs  render_delay_buffer.rs  render_delay_controller.rs  residual_echo_estimator.rs
aec3/crates/aec3-fft/: Cargo.toml
aec3/crates/aec3-fft/src/: lib.rs
aec3/crates/aec3-ns/: Cargo.toml
aec3/crates/aec3-ns/src/: lib.rs  noise_suppressor.rs  ns_fft.rs
aec3/crates/aec3-simd/: Cargo.toml
aec3/crates/aec3-simd/src/: lib.rs
app/: .gitignore  README.md  README.zh-CN.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
app/scripts/: gen-icon.py  prepare-tauri-assets.mjs  smoke-tauri-bundle.mjs
app/src/: App.tsx  advancedPipeline.test.ts  api.ts  asyncListener.test.ts  asyncListener.ts  autostartPreference.test.ts  autostartPreference.ts  configToml.test.ts  devBrowserShim.ts  diagnosticsFixedPath.test.ts  engineLogic.test.ts  engineLogic.ts  engineSelection.test.ts  i18n.tsx  main.tsx  mic.ts  numeric.ts  nvafx.ts  nvafxFixedRuntime.test.ts  nvafxProgress.test.ts  runEventDisplay.ts  runEvents.test.ts  runtimeControls.test.ts  runtimeControls.ts  runtimeTelemetry.ts  startupMode.test.ts  startupMode.ts  streamRecovery.test.ts  streamRecovery.ts  styles.css  telemetryGuard.test.ts  types.ts
app/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/resources/helpers/: README.md  README.zh-CN.md
app/src-tauri/resources/localvqe/models/: README.md
app/src-tauri/resources/localvqe/native/: README.md
app/src-tauri/src/: commands.rs  device_watch.rs  lib.rs  localvqe.rs  logging.rs  main.rs  nvafx.rs  platform.rs  proc.rs  sidecar.rs  single_instance_contract.rs  startup.rs  tests.rs  tray.rs
app/src/components/: Controls.tsx  Dropdown.tsx  ErrorBoundary.tsx  Hint.tsx  RuntimeDiagnosticsPage.tsx  RuntimeFooterBars.tsx  RuntimeSignalPanel.tsx  RuntimeStatusStrip.tsx  Scope.tsx  ScrambleText.test.ts  ScrambleText.tsx  SlideSwitch.tsx  Toggle.tsx  VolumeWheel.tsx  icons.tsx
app/src/pages/: AdvancedPage.tsx  DiagnosticsPage.tsx  EnginePage.tsx  MicSetupPage.tsx  RtxSetupPage.tsx
audit/: AUDIT_REPORT_2026-07-10.md  AUDIT_REVIEW.md  DECISIONS.md  EXECUTION_CHECKLIST.md  FIX_GOAL_PROMPT.md  FIX_PROGRESS.md
configs/: example.toml
crates/echoless-audio-io/: Cargo.toml
crates/echoless-audio-io/src/: file.rs  lib.rs  null.rs
crates/echoless-cli/: Cargo.toml
crates/echoless-cli/src/: cli.rs  config_validate.rs  dsp.rs  main.rs  nvafx_install.rs  offline.rs  probe_delay.rs  processor_manifest.rs  realtime.rs  run_command.rs
crates/echoless-cli/src/realtime/: control.rs  devices.rs  diagnostics.rs  frame_ring.rs  macos_process_tap.rs  resample.rs  stats.rs
crates/echoless-core/: Cargo.toml
crates/echoless-core/src/: lib.rs
crates/echoless-paths/: Cargo.toml
crates/echoless-paths/src/: lib.rs
crates/echoless-processors/: Cargo.toml  build.rs
crates/echoless-processors/src/: aec3.rs  chain.rs  dsp.rs  lib.rs  localvqe.rs  noise_suppression.rs  nvafx.rs  passthrough.rs  registry.rs  rnnoise.rs  sonora_aec3.rs  webrtc_ns.rs
crates/echoless-processors/tests/: aec3_direct.rs  echo_cancellation.rs  processor_chain_alloc.rs  sonora_direct.rs
docs/: ARCHITECTURE.md  ARCHITECTURE.zh-CN.md  CLI.md  CLI.zh-CN.md  NOISE_SUPPRESSION_ARCHITECTURE.zh-CN.md  NOISE_SUPPRESSION_SPEC.zh-CN.md  PHASE2_BACKLOG.md  PROBE_QUALITY_IMPROVEMENT.zh-CN.md  localvqe_inference.md
docs/architecture/: AEC3_DELAY_MOD_PLAN.md  AEC3_INTERNALIZATION_PLAN.md  audio_io_scope.md
docs/audit/: ACCEPTANCE_REVIEW.md  ARCH3_FE3_HOT_CONTROL_PLAN.md  CODE_AUDIT.md  PROGRESS.md  QUAL5_CLEANUP_PLAN.md  UI_ISSUES_VERIFICATION_20260703.md
docs/audit/archive/: ACCEPTANCE_REVIEW.md  ARCH2_CLEANUP_PLAN.md  ARCH3_FE3_HOT_CONTROL_PLAN.md
docs/codex-tasks/: TASK_P3_AEC3_INTERNALIZE.md  TASK_P4_AEC3_DELAY_MOD.md  TASK_P8_OFF_PASSTHROUGH.md
docs/frontend/: DEVICE_SAMPLE_RATE_RESAMPLING_HANDOFF.md  DIAGNOSTICS_RECORDING_HANDOFF.md  ENGINE_RUNTIME_WIZARD_GUIDANCE.md  FRONTEND_ADAPTATION_PLAN.md  FRONTEND_AGENT_HANDOFF.md  FRONTEND_BACKEND_REQUESTS.md  FRONTEND_PARAMETER_BOUNDARIES.md  FRONTEND_STATE_HANDOFF.md  LOCALVQE_MODEL_HANDOFF.md  MAC_REFERENCE_PROCESS_TAP_HANDOFF.md  NEAR_DELAY_PROBE_HANDOFF.md  RTX_DOWNLOAD_INSTALL_HANDOFF.md
docs/productization/: update_strategy.md
docs/research/: aec3_internal_map.md  cross_platform_architecture.md  mac_process_tap_findings.md  nvafx_runtime_pin_rotation.md  reference_repos_exploration_report.md  rtx_aec_runtime_distribution.md  sonora_aec3_internal_map.md  windows_aec_research.md
docs/windows-testing/: README.md  WINDOWS_AEC3_LOCALVQE_TEST_HANDOFF.md  WINDOWS_FRIEND_INSTALL_TEST_GUIDE.md  WINDOWS_INSTALLED_APP_SMOKE_HANDOFF.md  WINDOWS_RTX_AEC_TEST_HANDOFF.md
tools/macos-process-tap-poc/: Info.plist  README.md  README.zh-CN.md  build.sh
tools/macos-process-tap-poc/Sources/: main.swift
