# 跨平台实时 AEC 工具 — cargo workspace 骨架
# 设计见 ../research/cross_platform_architecture.md
[workspace]
resolver = "2"
members = [
    "crates/echoless-paths",
    "crates/echoless-audio-io",
    "crates/echoless-processors",
    "crates/echoless-core",
    "crates/echoless-cli",
]
# 内化的 aec3 引擎是独立子 workspace(edition 2024/resolver 3),不并入本 workspace;
# 经 path 依赖引用。见 aec3/Cargo.toml。
exclude = ["aec3"]

[workspace.package]
edition = "2021"
version = "1.0.0"
license = "MIT"
# aec3-apm 依赖要求 rust-version 1.91 + edition 2024(本机已 1.96)
rust-version = "1.91"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
hound = "3.5"
bitflags = "2"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
libloading = "0.8"
sha2 = "0.10"
zip = { version = "2", default-features = false, features = ["deflate"] }
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
] }
# rubato 留作处理器边界 SRC 的正式实现(蓝本 §10);骨架先用 chain.rs 里的占位线性重采样
rubato = "0.15"
