[package]
name = "echoless-cli"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "AEC 工具 CLI 前端(当前):离线跑链可用;实时/设备依赖平台 HAL(TODO)"

[[bin]]
name = "echoless"
path = "src/main.rs"

[features]
default = ["realtime"]
# 实时管线(cpal 跨平台 I/O:Windows WASAPI 含 loopback / macOS CoreAudio)。
realtime = ["dep:cpal", "dep:ringbuf", "dep:ctrlc"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
toml.workspace = true
echoless-hal = { path = "../echoless-hal" }
echoless-core = { path = "../echoless-core" }
echoless-processors = { path = "../echoless-processors" }
cpal = { version = "0.17", optional = true }
ringbuf = { version = "0.5", optional = true }
ctrlc = { version = "3", features = ["termination"], optional = true }

[target.'cfg(windows)'.dependencies]
echoless-hal-win = { path = "../echoless-hal-win" }

[target.'cfg(target_os = "macos")'.dependencies]
echoless-hal-mac = { path = "../echoless-hal-mac" }
