[package]
name = "echoless-cli"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Echoless CLI: realtime and offline reference-based AEC pipeline"

[[bin]]
name = "echoless"
path = "src/main.rs"

[features]
default = ["realtime"]
# 实时管线(cpal 跨平台 I/O:Windows WASAPI 含 loopback / macOS CoreAudio)。
realtime = ["dep:cpal", "dep:ringbuf", "dep:ctrlc", "dep:rubato"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
sha2.workspace = true
toml.workspace = true
zip.workspace = true
echoless-audio-io = { path = "../echoless-audio-io" }
echoless-core = { path = "../echoless-core" }
echoless-processors = { path = "../echoless-processors" }
hound.workspace = true
cpal = { version = "0.17", optional = true }
ringbuf = { version = "0.5", optional = true }
ctrlc = { version = "3", features = ["termination"], optional = true }
rubato = { workspace = true, optional = true }
