[package]
name = "echoless-core"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "管线配置 + 离线编排 + 共享 DSP 边界工具;不依赖任何平台 crate"

[dependencies]
anyhow.workspace = true
toml.workspace = true
serde.workspace = true
echoless-audio-io = { path = "../echoless-audio-io" }
echoless-processors = { path = "../echoless-processors" }
